@@ -1,6 +1,7 @@
--why does mp3 creates two temporary files, i.e. why does set question run twice?
+-when sync server is running, it seems possible to start a second copy of
+ Mnemosyne, which just complains about 'unable to start sync server'
 
--expand answer preferentially (Murray James Morrison, Gnome) (LP bug)
+-use version string in windows build
 
 -disable automatic media deletion, to allow people to move their media in their folder
 
@@ -8,14 +9,8 @@
  get rid of new_interval and keep next_rep? we need next rep in sqlite stats
  document why we store them
 
--use version string in windows build
-
 -reduce timeout on sync login, test again full sync
 -release database on client after sync error
-
--grade tooltips in adding cards (Gnome, LP bug)
-
--new 'activate plugin' dialog
 
 -also give warning on the client side if a sync failed and a backup needs to happen
 -detect long filenames under Windows during sync (partner, download binary file, 36)
@@ -29,12 +24,11 @@
 id.
 -store all xml as debug information during sync?
 
--when sync server is running, it seems possible to start a second copy of Mnemosyne, which just complains about
- 'unable to start sync server'
+-new 'activate plugin' dialog
+
+### Beta 11
 
 -card type clone: rename and delete, both in card browser and card type browser
-
-###
 
 -import from txt file (2 test cases from mac os	Naomi Borkowski)
 
@@ -45,10 +39,14 @@ http://dotancohen.com/howto/rtl_right_to_left.html (bug report)
 replace set_initial_grade by set_initial_grades(cards)? (Gnome, LP bug)
 -also make sure this is OK when changing card type creates extra cards
 -scheduler.spread_sister_cards?
--when learning late, related cards on the same day can happens
+-when learning late, related cards on the same day can happen
+
+### RC1
 
 -upgrade from 1.x from non latin user name (Patrick de Metz)
 -run on blank windows install under Qemu
+
+-picture renderer for MnemoGogo?
 
 -tell beta users to make sure to install latest beta first
 -remove upgrade_beta_6.py, beta_7, etc...
@@ -57,7 +55,7 @@ replace set_initial_grade by set_initial_grades(cards)? (Gnome, LP bug)
 -see if 1.x translations can be reused
 -remove mnemosyne/pyqt_ui/locale
 
-###
+### Release
 
 -save tree state (which nodes are expanded or not) (Troy Guze)
 QModelIndexList QAbstractItemModel::persistentIndexList () const
@@ -146,8 +144,6 @@ taking grade 0/1 cards as well into account?
 Milesteiner
 <ul><li>Focuses 20 to 30cm away</li>
   <li>Eyes wander and occasionally cross</li>
-  <li>Prefers black-and-white or highcontrast patterns</li>
-  <li>Prefers the human face to all other patterns </li>
 </ul>
 
 -coverage bug?: default_controller().sync() does not seem to get picked up.
@@ -208,11 +204,8 @@ Milesteiner
 
 -scrape from websites: https://bitbucket.org/nosklo/supymemo/downloads
 
--cntrl-c shortcut for question and answer
-
 -documentation on config.py: if you need to change this, send developers a line
-so that we
- know this is used a lot.
+ so that we know this is used a lot.
 
 -also allow scrolling webview widgets using up and down keys? Will probably require global
  event filter and slow everything down
@@ -249,8 +242,6 @@ so that we
 
 -condition coverage
  http://lautaportti.wordpress.com/2011/05/07/test-coverage-analysis/
-
--phonegap?
 
 -have hierarchy in plugin names
 
