@@ -1,4 +1,4 @@
-version = "beta-10"
+version = "beta-11"
 
 if __name__ == "__main__":
     print version
